--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ a {
 }
 
 .section-hero {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url("../images/people-office.png");
+    background-image:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/people-office.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -239,6 +239,33 @@ a {
 .team-role {
     text-align: center;
     color: #434455;
+}
+.section-team .social-list{
+    display:flex;
+    justify-content:center;
+    gap: 24px;
+}
+.section-team .social-item{
+    width: 40px;
+    height: 40px;
+}
+.section-team .social-link{
+    width: 100%;
+    height: 100%;
+    background-color:#4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+
+}
+.section-team .social-link:hover,
+.section-team .social-link:focus{
+    background-color: #404bbf;
+}
+.social-icon{
+    fill: #f4f4fd;
 }
 .section-portfolio {
     padding: 120px 0;
