--- a/css/styles.css
+++ b/css/styles.css
@@ -404,7 +404,7 @@ a {
 .footer-icon {
     width: 24px;
     height: 24px;
-    fill: var(#f4f4fd);
+    fill:#f4f4fd;
 }
 .footer .page-logo .studio {
     color: #f4f4fd;
